/**
 * MIT License
 * Copyright (c) 2021 Fonoster Inc
 *
 * The Agents proto contains the artificats for the administration
 * of Agents.
 */
syntax = "proto3";

package fonos.agents.v1beta1;

option go_package = "github.com/fonoster/fonos/mods/agents/fonos/services/protos/agents";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "common.proto";

// Define HTTP mapping.
// Client example (Assuming your service is hosted at the given 'DOMAIN_NAME'):
service Agents {
  // Lists Agents from the SIP Proxy subsystem
  rpc ListAgents (ListAgentsRequest) returns (ListAgentsResponse) {
    // Client example - list all the agents:
    //   curl -X GET http://DOMAIN_NAME/v1beta1/agents
    option (google.api.http) = { get: "/v1beta1/agents" };
  };
  // Creates a new Agent resource.
  rpc CreateAgent (CreateAgentRequest) returns (Agent) {
    option (google.api.http) = { 
      post: "/v1beta1/agents"
      body: "agent"
    };
  };
  // Gets Agent using its reference
  rpc GetAgent (GetAgentRequest) returns (Agent) {
    option (google.api.http) = { get: "/v1beta1/agents/{ref}" };
  };
  // Change or update fields in a resource
  rpc UpdateAgent (UpdateAgentRequest) returns (Agent) {
    option (google.api.http) = { 
      put: "/v1beta1/agents"
      body: "agent" 
    };
  };
  // Hard delete of a Agent resource
  rpc DeleteAgent (DeleteAgentRequest) returns (fonos.common.v1beta1.Empty) {
    option (google.api.http) = { 
      delete: "/v1beta1/agents/{ref}"
    };
  };
}

message ListAgentsRequest {
  // The maximum agent of items to return.
  int32 page_size = 1;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 2;

  // Level of detail of the individual entities
  fonos.common.v1beta1.View view = 3;
}

message ListAgentsResponse {
  // There will be a maximum agent of items returned based on the page_size field
  // in the request.
  repeated Agent agents = 1;

  // Token to retrieve the next page of results, or empty if there are no
  // more results in the list.
  string next_page_token = 2;
}

message CreateAgentRequest {
  Agent agent = 1;
}

message UpdateAgentRequest {
  Agent agent = 1;
}

message GetAgentRequest {
  string ref = 1;
}

message DeleteAgentRequest {
  string ref = 1;
}

message Agent {
  string ref = 1;
  string name = 2 [(google.api.field_behavior) = REQUIRED];
  string username = 3 [(google.api.field_behavior) = REQUIRED];
  string secret = 4 [(google.api.field_behavior) = REQUIRED];
  repeated string domains = 5 [(google.api.field_behavior) = REQUIRED];
  string privacy = 6;
  string create_time = 7 [(google.api.field_behavior) = OUTPUT_ONLY];
  string update_time = 8 [(google.api.field_behavior) = OUTPUT_ONLY];
}
